--- a/application-dev.yml
+++ b/application-dev.yml
@@ -100,9 +100,9 @@ hystrix:
             timeoutInMilliseconds: 20000
 
 info:
-  软件著作权: paascloud快速搭建企业级分布式微服务平台
-  著作登记号: 2018SR320076
-  关于我们: http://paascloud.net
+  软件著作权: ppcloud快速搭建企业级分布式微服务平台
+  著作登记号:
+  关于我们:
 
 paascloud:
   auth:
