--- a/ppcloud-gateway-dev.yml
+++ b/ppcloud-gateway-dev.yml
@@ -31,11 +31,11 @@ proxy:
 paascloud:
   enableSqlLogInterceptor: false
 # swagger butler配置
-swagger.butler:
-  api-docs-path: v2/api-docs
-  swagger-version: 1.0
-  auto-generate-from-zuul-routes: true
-# 指定要生成的范围
-  generate-routes: omc-route,mdc-route,opc-route,tpc-route,uac-route
+#swagger.butler:
+#  api-docs-path: v2/api-docs
+#  swagger-version: 1.0
+#  auto-generate-from-zuul-routes: true
+## 指定要生成的范围
+#  generate-routes: omc-route,mdc-route,opc-route,tpc-route,uac-route
 # 忽略某些路由生成
 #  ignore-routes:
